<resources>
    <string name="app_name">My Application</string>
    <string name="failed_to_fetch_data">Error</string>
    <string name="enter_category_and_value">v</string>
    <string name="search">search</string>
    <string name="write_parameter">write parameter</string>
    <string name="write_value">write value</string>
    <string name="textview">TextView</string>
    <string name="textview1">TextView</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="health_text">The health is = %s</string>
    <string name="grooming_text">The grooming is = %s</string>
    <string name="shedding_text">The shedding is = %s</string>
    <string name="todo">TODO</string>
</resources>